samples/_failures_safe/1761187401_43ea27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04bb5de1.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_04bb5de1.c:148:5: error: expected identifier at end of input
  148 |     heap->
      |     ^~~~
./samples/SAFE/__tmp_04bb5de1.c:148:5: error: expected declaration or statement at end of input
